inclusao das sections do portfolio e inclusao da tag div

--- a/index.html
+++ b/index.html
@@ -4,31 +4,76 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/style.css"> 
     <title> Portfolio </title>
 </head>
 <body>
     <header>
-        <section>
+        <section class="name">
             <img src="./assets/detalhe.png" alt="imagem de estrelas">
-            <p>Inaiane Macedo Barros</p>
+            <p><strong>Inaiane Macedo Barros</strong></p>
         </section>
-        <section>
-            <p> Sobre Mim</p>
-            <p>Skills</p>
-            <p>Hobbies</p>
-            <p>Formacao</p>
-            <p>Projetos</p>
-            <p>contato</p> 
+        <section class="menu">
+            <a href="#sobre">Sobre Mim</a>
+            <a href="#skil">Skills</a>
+            <a href="#hobbie">Hobbies</a>
+            <a href="#formacao">Formacao</a>
+            <a href="#projeto">Projetos</a>
+            <a href="#contato"><strong>contato@inaiane.com</strong></a> 
         </section>
     </header>
-    <main>
-        <h1> Olá, meu nome é Inaiane Barros e construo páginas web...</h1>
-        <p>Eu sou acadêmica do curso de Ciências da Computação e atualmente estou participando no projeto Oracle ONE na Alura.</p>  
-        <a href="https://github.com/InaianeBarros">Github</a>
-        <a href="https://www.linkedin.com/in/inaiane-m-barros/">Linkedin</a>
-        <a href="https://instagram.com/naybrros">Instagram</a>
-        <a>Curricuolo</a>
+    <main class="conteudo">
+        <section class="apresentacao"> 
+            <h1 class="inicio"> Olá, meu nome é Inaiane Barros e construo páginas web...</h1>
+            <p class="apresentacao__descricao">Eu sou acadêmica do curso de Ciências da Computação e atualmente estou participando no projeto Oracle ONE na Alura.</p>  
+            <a href="https://github.com/InaianeBarros">Github</a>
+            <a href="https://www.linkedin.com/in/inaiane-m-barros/">Linkedin</a>
+            <a href="https://instagram.com/naybrros">Instagram</a>
+            <a>Curriculo</a>
+        </section>
+        <section class="sobre__mim">
+            <div id="sobre">Sobre Mim</div>
+            <h2>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque velit velit, volutpat semper dignissim dictum, 
+                imperdiet ut lacus. Quisque gravida ex a mattis pretium. Suspendisse potenti. Ut semper sagittis ligula et lacinia. 
+            </h2>
+            <h2>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque velit velit, volutpat semper dignissim dictum, 
+                imperdiet ut lacus. Quisque gravida ex a mattis pretium. Suspendisse potenti. Ut semper sagittis ligula et lacinia. Aenean sit amet felis venenatis, 
+                egestas metus vitae, aliquet metus.
+            </h2>
+        </section>
+        <section class="habilidades">
+            <div id="skil">Skills</div>
+            <p>Html 5</p>
+            <p>Javascript</p>
+            <p>React</p>
+            <p>CSS</p>
+            <p>Python</p>
+        </section>
+        <section>
+            <div id="hobbie">Hobbies</div>
+            <p>Andar de Patins</p>
+            <p>Ouvir Musica</p>
+            <p>Jogar Video Game</p>
+            <p>Assistir Series</p>
+        </section>
+        <section>
+            <div id="formacao">Formacao</div>
+            <p>Academica de Ciencia da Computacao</p>
+            <p>Ingles Intemediario</p>
+            <p>One</p>
+        </section>
+        <section>
+            <div id="projeto">Projetos</div>
+            <p>Decodificar de Texto</p>
+            <p>Numero Secreto</p>
+        </section>
+        <section>
+            <div id="contato">Contato</div>
+
+        </section>
+       
     </main>
     <footer>
     </footer>
